fix(system-events): remove extra symbol from regex

--- a/default/pipelines/synology_system_events/conf.yml
+++ b/default/pipelines/synology_system_events/conf.yml
@@ -62,7 +62,7 @@ functions:
       source: _raw
       iterations: 100
       overwrite: false
-      regex: /System\s(?<user>.+?):[^\w]+(?<message>.+)./
+      regex: /System\s(?<user>.+?):[^\w]+(?<message>.+)/
       regexList: []
     description: Extract fields such as user and message.
   - id: serialize
